...
            android:fontFamily="@font/nexlight"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            tools:text="@string/placeHolder_text_year" />

        <TextView
            android:id="@+id/title_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/year_details"
            android:layout_marginBottom="-4dp"
            android:ellipsize="end"
            android:fontFamily="@font/nexabold"
...
            android:paddingEnd="@dimen/margrinTop_five"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            tools:text="@string/placeHolder_text_rating" />

        <TextView
            android:id="@+id/vote_average_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/rating_score_detail"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/nexlight"
            android:textColor="@android:color/white"
...
